--- a/app/globals.css
+++ b/app/globals.css
@@ -99,3 +99,14 @@
   width: 10px;
   height: 10px;
 }
+
+
+.rich-text h1{
+  @apply text-6xl font-bold
+}
+.rich-text h2{
+  @apply text-4xl font-bold
+}
+.rich-text h3{
+  @apply text-xl  font-bold
+}
